# eigen_expm_multiply

./: .gitmodules  CMakeLists.txt  README.md
include/: eigen_expm_multiply.h
include/Eigen/: expm_multiply.h
include/Eigen/detail/: expm_multiply.h
include/jakkes/: __eigen_expm_multiply_impl.h  eigen_expm_multiply.h
libs/: CMakeLists.txt
src/: CMakeLists.txt  expm_multiply.cc  impl.cc  impl.h
tests/: CMakeLists.txt  big_sparse_test.cc  big_sparse_test_2.cc  big_sparse_test_3.cc  big_sparse_test_4.cc  big_sparse_test_5.cc  big_sparse_test_6.cc  main.cc  ref.py
